# Newton.RS

./: API_TESTING_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  LICENSE  OPENAPI_SPECIFICATION.yaml  README.md  RULE_CHAINING_GUIDE.md  install_deps.py  main.py  pyproject.toml  setup.py  step_workflow_implementation.py
docs/: API_DOCUMENTATION.md  STEP_BASED_WORKFLOWS.md  SYSTEM_SPECIFICATION.md
examples/: comprehensive_business_rules.yml  step_based_workflow_rules.yml  step_workflow_simple.yml
logicbridge/: __init__.py  api.py  audit.py  cli.py  core.py  llm_generator.py  validation.py  workflow.py
schemas/: rulefile-v1.json
src/: dsl.rs  engine.rs  lib.rs  python_bindings.rs
static/: app.js  style.css
templates/: index.html
tests/: demo_llm_integration.py  test_business_rules.py
