[package]
name = "logicbridge-core"
version = "1.0.0"
edition = "2021"

[lib]
name = "logicbridge_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
pyo3 = { version = "0.20", features = ["extension-module"] }
thiserror = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"

[[bin]]
name = "logicbridge"
path = "src/main.rs"
